Fixed different card sizes on mobile devices

--- a/src/sass/components/_media.scss
+++ b/src/sass/components/_media.scss
@@ -48,7 +48,7 @@
 	}
 
 	.hero-img {
-		background-image: url('../../dist/img/jungle-big.jpg');
+		background-image: url('../../dist/img/girl-big.jpg');
 
 		&__box {
 			width: 75%;
