--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -132,6 +132,7 @@ body {
 		border-radius: 8px;
 		box-shadow: -1px 6px 15px -5px $gray;
 		transition: scale 0.3s;
+		width: 80%;
 
 		&-title {
 			font-size: 2.2rem;
